Reviewed and updated the project.

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -157,9 +157,9 @@
     "\n",
     "Increase in `RM` feature increases `MEDV`. If the house contains more rooms, it needs larger area, so that's valued more.\n",
     "\n",
-    "Increase in `LSTAT` should decrease `MEDV` since if working poor increases, that indicates the average house values are affordable for them meaning individula house's values are low.\n",
+    "Increase in `LSTAT` should decrease `MEDV` since if working poor increases, that indicates the average house values are affordable for them meaning individula house's values gets lower.\n",
     "\n",
-    "Increase in `PTRATIO` should increase `MEDV` since I think it is a rich area if teachers can take care smaller number of children."
+    "Decrease in `PTRATIO` should increase `MEDV` since that means teachers can take care smaller number of children and indicates they have a good education."
    ]
   },
   {
@@ -310,7 +310,7 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "The benefit of splitting data into train and testing data set is to avoid overfitting and make sure the model can make predictions for new data. If we don't have a testing data, we don't have a way to evaluate if the model can make good predictions for data the model has not seen before. "
+    "The benefit of splitting data into train and testing data set is to avoid overfitting and make sure the model can make predictions for new data. If we don't have a testing data, we don't have a way to evaluate if the model can make good predictions for unseen data. "
    ]
   },
   {
@@ -421,7 +421,7 @@
    "source": [
     "**Answer: ** When the maximum depth is 1, the model is suffered from high bias since training score is low. This means the model doesn't extract correct information from the test data to make a prediction. When the maximum depth is 10, the model is suffered from high variance. It's almost overfitted to the training data. This is observed by red dot in the graph; it's almost 1.0. However, validation score is not close to the training score. This concludes the model overfits to the training data and when it faces new data, it fails to make a good prediction.\n",
     "\n",
-    "In general, graph suggests when maximum depth is low, the model sufferes from high bias and when the maximum depth goes up, the model is suffered from high variance."
+    "Overall, the graph suggests when maximum depth is low, the model sufferes from high bias and when the maximum depth goes up, the model is suffered from high variance."
    ]
   },
   {
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** I think the maximum depth of 4 makes the best generalized model. This is because the green dot at the maximum depth at 4 has highest validation score. Since the model shows highest performance at maximum depth of 4, I think the model can makes better predictions to unseen data than the model with other maximum depth values."
+    "**Answer: ** I think the maximum depth of 4 makes the best generalized model. This is because the validation score at the maximum depth at 4 is the best. Since the model shows highest performance at maximum depth of 4, I think the model can makes better predictions to unseen data with maximum depth of 4."
    ]
   },
   {
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** k-fold cross-validation technique is to create k sets of train and test data. First, partition the entire test data into k sets. Second, train the model k times with using each set from k sets as a test data and the rest for training data. This technique provides benefits for grid search since it provides more data to check which parameter is the best for the model."
+    "**Answer: ** k-fold cross-validation technique is to create k sets of train and test data. First, partition the entire test data into k sets. Second, train the model k times with using each set as a test data and the rest for training data. This technique provides benefits for grid search since it provides more data to test which parameter is the best for the model."
    ]
   },
   {
@@ -640,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** I would suggest selling each house for $391,183.33, $189,123.53, $942,666.67 respectively. The features for Client 2's house indicates the house in low demand area. Therefore, the price is lower than the mean. In contrast, Client 3's features indicate the house is in high demand area. Therefore, the price is higher than the mean."
+    "**Answer: ** I would suggest selling each house for \\$391,183.33, \\$189,123.53, \\$942,666.67 respectively. The feature for the Client 1 indicates it is a middle class house. Therefore, it is close to the mean. The features for Client 2's house indicates the house in in low demand area because of high Neighborhood poverty level and high Student-teacher ratio. Therefore, the price is lower than the mean. In contrast, Client 3's features indicate the house is in high demand area. Therefore, the price is higher than the mean."
    ]
   },
   {
